# minja

./: .editorconfig  .flake8  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  run_tool_thinking_tests.sh  update_templates_and_goldens.py
.github/workflows/: build.yml
docs/: CAPABILITIES_AND_POLYFILLS.md
examples/: CMakeLists.txt  chat-template.cpp  raw.cpp
include/minja/: chat-template.hpp  minja.hpp
scripts/: analyze_capabilities.py  fetch_templates_and_goldens.py  render.py  run_fuzzing_mode.sh  run_tests.sh  tests.sh
tests/: CMakeLists.txt  fetch_templates_and_goldens.py  synthetic-deepseek-v3.2-dsml.jinja  synthetic-requires-non-empty-content.jinja  test-capabilities.cpp  test-chat-template.cpp  test-fuzz.cpp  test-polyfills.cpp  test-supported-template.cpp  test-syntax.cpp  test-tool-thinking-template.cpp  test_no_duplicate_templates.py  tool-thinking-template.jinja
tests/contexts/: reasoning_clear_thinking.json  reasoning_disabled.json  reasoning_multi_turn.json  reasoning_only.json  reasoning_position_based.json  reasoning_with_tools.json  simple.json  system.json  tool_plan_reasoning.json  tool_thinking.json  tool_use.json  tool_use_code_interpreter.json
tests_files/: Qwen-Qwen3-Coder-30B-A3B-Instruct.jinja
